--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Klinik - Clinic Website Template</title>
+    <title>About Us</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -61,7 +61,7 @@
             <div class="col-lg-5 px-5 text-end">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-4">
                     <small class="fa fa-phone-alt text-primary me-2"></small>
-                    <small>+012 345 6789</small>
+                    <small>+1 855 888 0114</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <a class="btn btn-sm-square rounded-circle bg-white text-primary me-1" href=""><i
@@ -139,22 +139,91 @@
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <p class="d-inline-block border rounded-pill py-1 px-4">About Us</p>
-                    <h1 class="mb-4">Why You Should Trust Us? Get Know About Us!</h1>
-                    <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita
-                        erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-                    <p class="mb-4">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam rebum
-                        amet diam ipsum. Clita clita labore, dolor duo nonumy clita sit at, sed sit sanctus dolor eos.
+                    <h1 class="mb-4">Who We Are</h1>
+                    <p>Adam Vacations Medical is a trusted, patient-first medical tourism facilitator based in India,
+                        committed to connecting international patients with world-class healthcare services across top
+                        cities like Delhi, Mumbai, Bangalore, Indore, and Gurgaon. We are a division of Adam Vacations
+                        Pvt. Ltd., a global travel and wellness solutions company, and we specialize in offering
+                        holistic support for patients traveling to India for medical treatment.</p>
+                    <p class="mb-4">Our mission is to simplify the journey to better health—by offering not just
+                        world-class treatment options, but a seamless experience including visa support, flight
+                        bookings, hotel accommodations, and even post-treatment care.
+
                     </p>
-                    <p><i class="far fa-check-circle text-primary me-3"></i>Quality health care</p>
-                    <p><i class="far fa-check-circle text-primary me-3"></i>Only Qualified Doctors</p>
-                    <p><i class="far fa-check-circle text-primary me-3"></i>Medical Research Professionals</p>
-                    <a class="btn btn-primary rounded-pill py-3 px-5 mt-3" href="">Read More</a>
+                    <h2>Our Vision</h2>
+                    <p>To become a leading global partner in medical tourism by making high-quality, affordable, and
+                        ethical healthcare accessible to international patients, especially from the USA, UK, Europe,
+                        Africa, the Middle East, and Asia-Pacific regions.</p>
+
+
+                    <!-- <a class="btn btn-primary rounded-pill py-3 px-5 mt-3" href="">Read More</a> -->
                 </div>
             </div>
         </div>
     </div>
     <!-- About End -->
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="row g-5">
 
+                <div class="col-lg-12 wow fadeIn" data-wow-delay="0.5s">
+
+                    <h2>Our Mission</h2>
+                    <p><i class="far fa-check-circle text-primary me-3"></i>To ensure safe, timely, and effective
+                        treatment options in India for global patients.</p>
+                    <p><i class="far fa-check-circle text-primary me-3"></i>To collaborate only with NABH- and
+                        JCI-accredited hospitals and globally renowned specialists</p>
+                    <p><i class="far fa-check-circle text-primary me-3"></i>To provide personalized care coordinators
+                        for end-to-end support throughout the medical journey.</p>
+                    <p><i class="far fa-check-circle text-primary me-3"></i>To ensure transparency in costs, procedures,
+                        hospital choices, and travel planning.
+                    </p>
+
+                    <!-- <a class="btn btn-primary rounded-pill py-3 px-5 mt-3" href="">Read More</a> -->
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="row g-5">
+
+                <div class="col-lg-12 wow fadeIn" data-wow-delay="0.5s">
+
+                    <h2>Why Choose Adam Vacations Medical?</h2>
+                    <strong>Top-Tier Hospitals</strong>
+                    <p><i class="far fa-check-circle text-primary me-3"></i>We work exclusively with India’s most
+                        reputed multi-specialty hospitals such as Fortis, Apollo, Medanta, Max
+                        Healthcare, and more—ensuring the highest standards of treatment.</p>
+                    <strong>Highly Qualified Doctors</strong>
+
+                    <p><i class="far fa-check-circle text-primary me-3"></i>Our partner hospitals house world-renowned
+                        surgeons and specialists in cardiology, oncology, orthopedics, fertility, cosmetic surgery,
+                        neurology, and more.
+                    </p>
+                    <strong>Global Patient Services</strong>
+                    <p><i class="far fa-check-circle text-primary me-3"></i>From the USA to Africa to Europe, we support
+                        international patients with multilingual staff, video consultations, medical record evaluations,
+                        second opinions, and complete logistical support.
+                    </p>
+                    <strong>End-to-End Travel Support</strong>
+                    <p><i class="far fa-check-circle text-primary me-3"></i>From visa letters to airport pickups, hotel
+                        stays, and translator services, we manage it all so that patients and their families can focus
+                        entirely on recovery.
+
+                    </p>
+                    <strong>Affordable Healthcare</strong>
+                    <p><i class="far fa-check-circle text-primary me-3"></i>India offers 60–80% cost savings
+                        compared to countries like the USA, without compromising on quality. We ensure transparent
+                        pricing and no hidden fees.
+
+
+                    </p>
+                    <!-- <a class="btn btn-primary rounded-pill py-3 px-5 mt-3" href="">Read More</a> -->
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Feature Start -->
     <div class="container-fluid bg-primary overflow-hidden my-5 px-lg-0">
@@ -315,9 +384,10 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Address</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i> 7901 4TH ST N STE 300, ST PETERSBURG, FL
+                        33702 </p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+1 855 888 0114</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>medical@adamvacations.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social rounded-circle" href=""><i
                                 class="fab fa-twitter"></i></a>
