--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <link href="lib/animate/animate.min.css" rel="stylesheet">
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+    
+    <!-- Include intl-tel-input CSS & JS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/19.2.15/css/intlTelInput.css" />
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -431,47 +434,130 @@
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="bg-light rounded h-100 d-flex align-items-center p-5">
-                        <form>
-                            <div class="row g-3">
-                                <div class="col-12 col-sm-6">
-                                    <input type="text" class="form-control border-0" placeholder="Your Name" style="height: 55px;">
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <input type="email" class="form-control border-0" placeholder="Your Email" style="height: 55px;">
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <input type="text" class="form-control border-0" placeholder="Your Mobile" style="height: 55px;">
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <select class="form-select border-0" style="height: 55px;">
-                                        <option selected>Choose Doctor</option>
-                                        <option value="1">Doctor 1</option>
-                                        <option value="2">Doctor 2</option>
-                                        <option value="3">Doctor 3</option>
-                                    </select>
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <div class="date" id="date" data-target-input="nearest">
-                                        <input type="text"
-                                            class="form-control border-0 datetimepicker-input"
-                                            placeholder="Choose Date" data-target="#date" data-toggle="datetimepicker" style="height: 55px;">
-                                    </div>
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <div class="time" id="time" data-target-input="nearest">
-                                        <input type="text"
-                                            class="form-control border-0 datetimepicker-input"
-                                            placeholder="Choose Date" data-target="#time" data-toggle="datetimepicker" style="height: 55px;">
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <textarea class="form-control border-0" rows="5" placeholder="Describe your problem"></textarea>
-                                </div>
-                                <div class="col-12">
-                                    <button class="btn btn-primary w-100 py-3" type="submit">Book Appointment</button>
-                                </div>
-                            </div>
-                        </form>
+
+                        <form id="appointmentForm" class="needs-validation" novalidate>
+    <div class="row g-3">
+        <!-- Name -->
+        <div class="col-12">
+            <input 
+                type="text" 
+                class="form-control border-0" 
+                id="name"
+                name="name"
+                placeholder="Your Name" 
+                style="height: 55px;"
+                required
+                minlength="2"
+                maxlength="100"
+            >
+            <div class="invalid-feedback">
+                Please enter your name (minimum 2 characters)
+            </div>
+        </div>
+
+        <!-- Email -->
+        <div class="col-12 col-sm-6">
+            <input 
+                type="email" 
+                class="form-control border-0" 
+                id="email"
+                name="email"
+                placeholder="Your Email" 
+                style="height: 55px;"
+                required
+            >
+            <div class="invalid-feedback">
+                Please enter a valid email address
+            </div>
+        </div>
+
+        <!-- Mobile with Country Code -->
+        <div class="col-12 col-sm-6">
+            <input 
+                type="tel" 
+                class="form-control border-0" 
+                id="phone"
+                name="phone"
+                placeholder="Your Mobile" 
+                style="height: 55px;"
+                required
+            >
+            <div class="invalid-feedback">
+                Please enter a valid phone number
+            </div>
+        </div>
+
+        <!-- Date -->
+        <div class="col-12 col-sm-6">
+            <div class="date" id="datePicker" data-target-input="nearest">
+                <input 
+                    type="text"
+                    class="form-control border-0 datetimepicker-input"
+                    id="appointmentDate"
+                    name="appointmentDate"
+                    placeholder="Choose Date" 
+                    data-target="#datePicker" 
+                    data-toggle="datetimepicker" 
+                    style="height: 55px;"
+                    required
+                >
+            </div>
+            <div class="invalid-feedback">
+                Please select a date
+            </div>
+        </div>
+
+        <!-- Time -->
+        <div class="col-12 col-sm-6">
+            <div class="time" id="timePicker" data-target-input="nearest">
+                <input 
+                    type="text"
+                    class="form-control border-0 datetimepicker-input"
+                    id="appointmentTime"
+                    name="appointmentTime"
+                    placeholder="Choose Time" 
+                    data-target="#timePicker" 
+                    data-toggle="datetimepicker" 
+                    style="height: 55px;"
+                    required
+                >
+            </div>
+            <div class="invalid-feedback">
+                Please select a time
+            </div>
+        </div>
+
+        <!-- Problem Description -->
+        <div class="col-12">
+            <textarea 
+                class="form-control border-0" 
+                id="description"
+                name="description"
+                rows="5" 
+                placeholder="Describe your problem"
+                required
+                minlength="10"
+            ></textarea>
+            <div class="invalid-feedback">
+                Please describe your problem (minimum 10 characters)
+            </div>
+        </div>
+
+        <!-- Submit Button -->
+        <div class="col-12">
+            <button 
+                class="btn btn-primary w-100 py-3" 
+                type="submit" 
+                id="submitBtn"
+                disabled
+            >
+                Book Appointment
+            </button>
+            <div id="form-message" class="mt-3"></div>
+        </div>
+    </div>
+</form>
+
                     </div>
                 </div>
             </div>
@@ -592,9 +678,168 @@
     <script src="lib/tempusdominus/js/moment.min.js"></script>
     <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
     <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/19.2.15/js/intlTelInput.min.js"></script>
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+
+
+
+    <script>
+// Wait for DOM to load
+document.addEventListener("DOMContentLoaded", function () {
+
+    // Initialize international phone input
+    const phoneInputField = document.getElementById("phone");
+    const phoneInput = window.intlTelInput(phoneInputField, {
+        initialCountry: "in", // Default to India
+        preferredCountries: ["in", "us", "gb", "ae", "sg"],
+        utilsScript: "https://cdn.jsdelivr.net/npm/intl-tel-input@19.2.15/build/js/utils.js",
+        separateDialCode: true,
+        autoPlaceholder: "aggressive",
+        nationalMode: false,
+        formatOnDisplay: true,
+    });
+
+    const form = document.getElementById("appointmentForm");
+    const submitBtn = document.getElementById("submitBtn");
+    const messageDiv = document.getElementById("form-message");
+
+    // Track interacted fields
+    const interactedFields = new Set();
+
+    // Validation function
+    function validateField(field) {
+        let isValid = false;
+
+        switch (field.id) {
+            case "name":
+                isValid = field.value.trim().length >= 2;
+                break;
+            case "email":
+                isValid = /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(field.value.trim());
+                break;
+            case "phone":
+                isValid = phoneInput.isValidNumber();
+                break;
+            case "appointmentDate":
+            case "appointmentTime":
+                isValid = field.value.trim() !== "";
+                break;
+            case "description":
+                isValid = field.value.trim().length >= 10;
+                break;
+        }
+
+        // Show validation only after interaction
+        if (interactedFields.has(field.id)) {
+            field.classList.toggle("is-valid", isValid);
+            field.classList.toggle("is-invalid", !isValid);
+        }
+
+        updateSubmitButton();
+    }
+
+    // Enable/disable submit button
+    function updateSubmitButton() {
+        let allValid = true;
+
+        ["name", "email", "phone", "appointmentDate", "appointmentTime", "description"].forEach(id => {
+            const field = document.getElementById(id);
+            if (!field) return;
+
+            if (interactedFields.has(id)) {
+                if (!field.classList.contains("is-valid")) {
+                    allValid = false;
+                }
+            } else {
+                allValid = false; // Not interacted yet → disable
+            }
+        });
+
+        submitBtn.disabled = !allValid;
+    }
+
+    // Attach listeners to all fields
+    const fields = ["name", "email", "phone", "appointmentDate", "appointmentTime", "description"];
+    fields.forEach(id => {
+        const el = document.getElementById(id);
+        if (el) {
+            el.addEventListener("focus", () => interactedFields.add(id));
+            el.addEventListener("input", () => {
+                interactedFields.add(id);
+                validateField(el);
+            });
+            el.addEventListener("blur", () => {
+                interactedFields.add(id);
+                validateField(el);
+            });
+        }
+    });
+
+    // Special listener for phone country change
+    phoneInputField.addEventListener("countrychange", () => {
+        interactedFields.add("phone");
+        validateField(phoneInputField);
+    });
+
+    // Form submission
+    form.addEventListener("submit", async function (e) {
+        e.preventDefault();
+
+        if (submitBtn.disabled) return;
+
+        // Show loading
+        submitBtn.disabled = true;
+        submitBtn.innerHTML = '<span class="spinner-border spinner-border-sm me-2"></span> Sending...';
+
+        // Collect sanitized data
+        const formData = {
+            name: document.getElementById("name").value.trim(),
+            email: document.getElementById("email").value.trim().toLowerCase(),
+            phone: phoneInput.getNumber(), // Full international number e.g. +919876543210
+            appointmentDate: document.getElementById("appointmentDate").value.trim(),
+            appointmentTime: document.getElementById("appointmentTime").value.trim(),
+            description: document.getElementById("description").value.trim(),
+        };
+
+        console.log("Form data ", formData)
+
+        try {
+            const response = await fetch("/api/book-appointment", {  // ← Change to your actual endpoint
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json",
+                },
+                body: JSON.stringify(formData),
+            });
+
+            const data = await response.json();
+
+            if (response.ok) {
+                messageDiv.innerHTML = '<div class="alert alert-success">Appointment booked successfully!</div>';
+                form.reset();
+                submitBtn.disabled = true;
+                // Optional: redirect
+                // setTimeout(() => window.location.href = "/thank-you", 2000);
+            } else {
+                messageDiv.innerHTML = `<div class="alert alert-danger">${data.message || "Failed to book appointment"}</div>`;
+            }
+        } catch (err) {
+            messageDiv.innerHTML = '<div class="alert alert-danger">Error connecting to server. Please try again.</div>';
+        } finally {
+            submitBtn.innerHTML = "Book Appointment";
+            submitBtn.disabled = false;
+        }
+    });
+
+    // Initial state
+    submitBtn.disabled = true;
+});
+</script>
+
+
+    
 </body>
 
 </html>
