--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@ document.addEventListener("DOMContentLoaded", function () {
     // Initialize international phone input
     const phoneInputField = document.getElementById("phone");
     const phoneInput = window.intlTelInput(phoneInputField, {
-        initialCountry: "in", // Default to India
+        initialCountry: "us", // Default to India
         preferredCountries: ["in", "us", "gb", "ae", "sg"],
         utilsScript: "https://cdn.jsdelivr.net/npm/intl-tel-input@19.2.15/build/js/utils.js",
         separateDialCode: true,
@@ -727,7 +727,7 @@ document.addEventListener("DOMContentLoaded", function () {
                 isValid = field.value.trim() !== "";
                 break;
             case "description":
-                isValid = field.value.trim().length >= 10;
+                isValid = field.value.trim().length >= 10 && field.value.trim().length <= 1000;
                 break;
         }
 
@@ -795,7 +795,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
         // Collect sanitized data
         const formData = {
-            name: document.getElementById("name").value.trim(),
+            fullName: document.getElementById("name").value.trim(),
             email: document.getElementById("email").value.trim().toLowerCase(),
             phone: phoneInput.getNumber(), // Full international number e.g. +919876543210
             appointmentDate: document.getElementById("appointmentDate").value.trim(),
@@ -806,7 +806,7 @@ document.addEventListener("DOMContentLoaded", function () {
         console.log("Form data ", formData)
 
         try {
-            const response = await fetch("/api/book-appointment", {  // ← Change to your actual endpoint
+            const response = await fetch("https://localhost:32769/api/MedicalEnquiry", {  // ← Change to your actual endpoint
                 method: "POST",
                 headers: {
                     "Content-Type": "application/json",
@@ -817,11 +817,11 @@ document.addEventListener("DOMContentLoaded", function () {
             const data = await response.json();
 
             if (response.ok) {
-                messageDiv.innerHTML = '<div class="alert alert-success">Appointment booked successfully!</div>';
+                messageDiv.innerHTML = '<div class="alert alert-success">Appointment booked successfully! Redirecting...</div>';
                 form.reset();
                 submitBtn.disabled = true;
                 // Optional: redirect
-                // setTimeout(() => window.location.href = "/thank-you", 2000);
+                 setTimeout(() => window.location.href = "/thank-you", 2000);
             } else {
                 messageDiv.innerHTML = `<div class="alert alert-danger">${data.message || "Failed to book appointment"}</div>`;
             }
