--- a/team.html
+++ b/team.html
@@ -32,6 +32,8 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+                <link href="css/mobile-responsive.css" rel="stylesheet" />
+
 </head>
 
 <body>
