--- a/termsandconditions.html
+++ b/termsandconditions.html
@@ -32,6 +32,30 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/mobile-responsive.css" rel="stylesheet" />
+    <style>
+        .page-header {
+            background: url(img/about-banner.png) top center no-repeat;
+        }
+
+        .display-3 {
+            font-size: 2rem;
+            color: #00154c !important;
+            text-align: center;
+        }
+
+        .size-14 {
+
+            color: #333;
+        }
+
+        @media (max-width:767px) {
+            .display-3 {
+                font-size: 18px;
+                color: #000;
+            }
+        }
+    </style>
 </head>
 
 <body>
@@ -45,65 +69,40 @@
     <!-- Spinner End -->
 
 
-    <!-- Topbar Start -->
-    <div class="container-fluid bg-light p-0 wow fadeIn" data-wow-delay="0.1s">
-        <div class="row gx-0 d-none d-lg-flex">
-            <div class="col-lg-7 px-5 text-start">
-                <div class="h-100 d-inline-flex align-items-center py-3 me-4">
-                    <small class="fa fa-map-marker-alt text-primary me-2"></small>
-                    <small>Unit 16A, 16B / 17A Ground Floor, Tower B3, Spaze Itech Park, Sector 49, Gurugram, Haryana
-                        122018, India </small>
-                </div>
-                <div class="h-100 d-inline-flex align-items-center py-3">
-                    <small class="far fa-clock text-primary me-2"></small>
-                    <small>Mon - Fri : 09.00 AM - 09.00 PM</small>
-                </div>
-            </div>
-            <div class="col-lg-5 px-5 text-end">
-                <div class="h-100 d-inline-flex align-items-center py-3 me-4">
-                    <small class="fa fa-phone-alt text-primary me-2"></small>
-                    <small>+1 855 888 0114</small>
-                </div>
-                <div class="h-100 d-inline-flex align-items-center">
-                    <a class="btn btn-sm-square rounded-circle bg-white text-primary me-1" href=""><i
-                            class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-sm-square rounded-circle bg-white text-primary me-1" href=""><i
-                            class="fab fa-twitter"></i></a>
-                    <a class="btn btn-sm-square rounded-circle bg-white text-primary me-1" href=""><i
-                            class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-sm-square rounded-circle bg-white text-primary me-0" href=""><i
-                            class="fab fa-instagram"></i></a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Topbar End -->
-
-
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
             <img src="img/logo.png" style="width:150px;">
         </a>
+        <div class="phone-header-mobile">
+            <a href="tel:1-855-888-0114"><i class="fa fa-phone"></i></a>
+        </div>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="medical-treatment.html" class="nav-item nav-link">Medical Treatment Cost</a>
+                <a href="index.html" class="nav-item nav-link active">Home</a>
+                <a href="about.html" class="nav-item nav-link">About Us</a>
+                <a href="service.html" class="nav-item nav-link">Services</a>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Treatments</a>
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
                         <a href="cardiac-surgery.html" class="dropdown-item">Cardiac Surgery</a>
-
+                        <!-- <a href="team.html" class="dropdown-item">Our Doctor</a>
+                        <a href="appointment.html" class="dropdown-item">Appointment</a>
+                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                        <a href="404.html" class="dropdown-item">404 Page</a> -->
                     </div>
                 </div>
-                <a href="contact.html" class="nav-item nav-link active">Contact</a>
+                <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Appointment<i
-                    class="fa fa-arrow-right ms-3"></i></a>
+            <div class="d-none d-lg-block call-top">
+                <span>Request a call back</span>
+                <a href="tel:+1-855-888-0114">
+                    +1-855-888-0114
+                </a>
+            </div>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -373,11 +372,48 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Address</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>7901 4TH ST N STE 300, ST PETERSBURG, FL
-                        33702</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+1 855 888 0114</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>medical@adamvacations.com</p>
+                    <h5 class="text-light mb-4">About Us <br>
+                        <hr>
+                    </h5>
+
+                    <p class="size-txt">Adam Vacations is a fully accredited & certified medical tourism company based
+                        in
+                        India. We offer
+                        tailored options for patients looking for competitive & quality medical treatment.</p>
+
+                </div>
+
+                <div class="col-lg-3 col-md-6">
+                    <h5 class="text-light mb-4">Services <br>
+                        <hr>
+                    </h5>
+                    <a class="btn btn-link" href="cardiac-surgery.html">Cardiac Surgery</a>
+                    <a class="btn btn-link size-txt-1" href="medical-treatment.html">Medical Treatment Cost</a>
+                    <a class="btn btn-link size-txt-1" href="refund-policy.html">Refund & Cancellation Policy</a>
+
+                </div>
+
+                <div class="col-lg-3 col-md-6">
+                    <h5 class="text-light mb-4">Quick Links <br>
+                        <hr>
+                    </h5>
+                    <a class="btn btn-link size-txt-1" href="about.html">About Us</a>
+                    <a class="btn btn-link size-txt-1" href="contact.html">Contact Us</a>
+                    <a class="btn btn-link size-txt-1" href="privacy-policy.html">Privacy Policy</a>
+                    <a class="btn btn-link size-txt-1" href="termsandconditions.html">Terms & Condition</a>
+
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h5 class="text-light mb-4">Address <br>
+                        <hr>
+                    </h5>
+                    <p class="mb-2 adgest size-txt-1"><i class="fa fa-map-marker-alt me-3"></i>Unit 16A, 16B / 17A
+                        Ground Floor,
+                        Tower B3,
+                        Spaze Itech Park, Sector 49, Gurugram, Haryana 122018, India
+                    </p>
+                    <p class="mb-2 adgest size-txt-1"><i class="fa fa-phone-alt me-3"></i>+1-855-888-0114</p>
+                    <p class="mb-2 adgest size-txt-1"><i class="fa fa-envelope me-3"></i>medical@adamvacations.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social rounded-circle" href=""><i
                                 class="fab fa-twitter"></i></a>
@@ -389,37 +425,12 @@
                                 class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Services</h5>
-                    <a class="btn btn-link" href="">Cardiology</a>
-                    <a class="btn btn-link" href="">Pulmonary</a>
-                    <a class="btn btn-link" href="">Neurology</a>
-                    <a class="btn btn-link" href="">Orthopedics</a>
-                    <a class="btn btn-link" href="">Laboratory</a>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Quick Links</h5>
-                    <a class="btn btn-link" href="about.html">About Us</a>
-                    <a class="btn btn-link" href="contact.html">Contact Us</a>
-                    <a class="btn btn-link" href="privacy-policy.html">Privacy Policy</a>
-                    <a class="btn btn-link" href="termsandconditions.html">Terms & Condition</a>
-                    <a class="btn btn-link" href="refund-policy.html">Refund & Cancellation Policy</a>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Newsletter</h5>
-                    <p>Caring for Your Health, Every Day</p>
-                    <div class="position-relative mx-auto" style="max-width: 400px;">
-                        <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                        <button type="button"
-                            class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
-                    </div>
-                </div>
             </div>
         </div>
         <div class="container">
             <div class="copyright">
                 <div class="row">
-                    <div class="col-md-12 text-center text-md-start mb-3 mb-md-0">
+                    <div class="col-md-12 text-center text-md-start mb-3 mb-md-0 size-txt-1">
                         &copy; medical@adamvacations.com, All Right Reserved.
                     </div>
                 </div>
