--- a/testimonial.html
+++ b/testimonial.html
@@ -32,6 +32,21 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+                <link href="css/mobile-responsive.css" rel="stylesheet" />
+<style>
+    .page-header {
+    background: url(img/about-banner.png) top center no-repeat;
+}
+.display-3 {
+    font-size: 2rem;
+    color: #00154c !important;
+    text-align: center;
+}
+.size-14 {
+  
+        color:#333;
+    }
+</style>
 </head>
 
 <body>
@@ -85,6 +100,9 @@
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
             <img src="img/logo.png" style="width:150px;">
         </a>
+         <div class="phone-header-mobile">
+            <a href="tel:1-855-888-0114"><i class="fa fa-phone"></i></a>
+        </div>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
