pre-production push

--- a/contact.html
+++ b/contact.html
@@ -544,7 +544,7 @@
 
           try {
             const response = await fetch(
-              "https://localhost:32769/api/MedicalMessage",
+              "/api/MedicalMessage",
               {
                 // ← change URL
                 method: "POST",
