--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@
 
                 try {
                     const response = await fetch(
-                        "https://localhost:32769/api/MedicalEnquiry",
+                        "/api/MedicalEnquiry",
                         {
                             // ← Change to your actual endpoint
                             method: "POST",
