--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
 
 
     <!-- About Start -->
-    <div class="container-xxl py-5">
+    <div class="container-xxl space-1">
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
@@ -154,7 +154,7 @@
         </div>
     </div>
     <!-- About End -->
-    <div class="container-xxl py-5">
+    <div class="container-xxl space-1">
         <div class="container">
             <div class="row g-5">
 
@@ -180,7 +180,7 @@
             </div>
         </div>
     </div>
-    <div class="container-xxl py-5">
+    <div class="container-xxl space-1">
         <div class="container">
             <div class="row g-5">
 
@@ -215,80 +215,90 @@
 
 
                     </p>
-                    <!-- <a class="btn btn-primary rounded-pill py-3 px-5 mt-3" href="">Read More</a> -->
-                    <h2 class="size-14">Our Services at a Glance</h2>
-                    <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Medical Consultations &
-                        Second Opinions
-                    </p>
-                    <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Surgical & Non-Surgical
-                        Treatment Planning
-                    </p>
-                    <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Visa Invitation Letters
-                    </p>
-                    <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Flight Booking & Airport
-                        Transfers
-                    </p>
-                    <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Accommodation Near Hospitals
-                    </p>
-                    <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Post-treatment Recovery
-                        Packages
-                    </p>
-                    <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Wellness & Rejuvenation
-                        Add-ons
-                    </p>
-                    <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Interpreter & Attendant
-                        Assistance
-                    </p>
-                    <h2 class="size-14">Specialties We Handle</h2>
-                    <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Cardiac Surgery
-
-                    </p>
-                    <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Orthopedic Surgery
-
-                    </p>
-                    <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>IVF & Fertility
-
-                    </p>
-                    <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Cosmetic & Plastic Surgery
-
-                    </p>
-                    <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Spine & Neuro Surgeries
-
-                    </p>
-                    <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i> Liver & Kidney Transplants
-
-                    </p>
-                    <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Bariatric (Weight Loss)
-                        Surgery
-
-                    </p>
-                    <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Cancer Treatment
-                    </p>
-                    <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Dental Implants
-
-                    </p>
-                    <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Eye Surgeries
 
 
-                    </p>
-                    <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Stem Cell Therapy
-
-
-                    </p>
-                    <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i> Hair Transplants
-
-
-                    </p>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-xxl space-1">
+        <div class="row">
+            <div class="col-sm-6 col-xs-12">
+                <!-- <a class="btn btn-primary rounded-pill py-3 px-5 mt-3" href="">Read More</a> -->
+                <h2 class="size-14">Our Services at a Glance</h2>
+                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Medical Consultations &
+                    Second Opinions
+                </p>
+                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Surgical & Non-Surgical
+                    Treatment Planning
+                </p>
+                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Visa Invitation Letters
+                </p>
+                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Flight Booking & Airport
+                    Transfers
+                </p>
+                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Accommodation Near Hospitals
+                </p>
+                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Post-treatment Recovery
+                    Packages
+                </p>
+                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Wellness & Rejuvenation
+                    Add-ons
+                </p>
+                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Interpreter & Attendant
+                    Assistance
+                </p>
+            </div>
+            <div class="col-sm-6 col-xs-12">
+                <h2 class="size-14">Specialties We Handle</h2>
+                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Cardiac Surgery
+
+                </p>
+                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Orthopedic Surgery
+
+                </p>
+                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>IVF & Fertility
+
+                </p>
+                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Cosmetic & Plastic Surgery
+
+                </p>
+                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Spine & Neuro Surgeries
+
+                </p>
+                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i> Liver & Kidney Transplants
+
+                </p>
+                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Bariatric (Weight Loss)
+                    Surgery
+
+                </p>
+                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Cancer Treatment
+                </p>
+                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Dental Implants
+
+                </p>
+                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Eye Surgeries
+
+
+                </p>
+                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i>Stem Cell Therapy
+
+
+                </p>
+                <p class="size-14"><i class="far fa-check-circle text-primary me-3"></i> Hair Transplants
+
+
+                </p>
             </div>
         </div>
     </div>
 
     <!-- Feature Start -->
-    <div class="container-fluid bg-primary-1 overflow-hidden my-5 px-lg-0">
+    <div class="container-fluid bg-primary-1 overflow-hidden space-1">
         <div class="container feature px-lg-0">
             <div class="row g-0 mx-lg-0">
-                <div class="col-lg-6 feature-text py-5 wow fadeIn" data-wow-delay="0.1s">
+                <div class="col-lg-6 feature-text space-1 wow fadeIn" data-wow-delay="0.1s">
                     <div class="p-lg-5 ps-lg-0">
                         <h1 class="text-white-1 mb-4 size-18">Trusted by Patients from Around the World</h1>
                         <p class="text-white-1 mb-4 pb-2 size-14">We’ve proudly served hundreds of international
