--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet" />
     <link href="css/mobile-responsive.css" rel="stylesheet" />
+    <style>
+        @media (max-width: 767px) {
+            .space-1 {
+                padding-top: 0;
+                padding-bottom: 0;
+            }
+        }
+    </style>
 </head>
 
 <body>
@@ -64,7 +72,19 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link active">Home</a>
                 <a href="about.html" class="nav-item nav-link">About Us</a>
-                <a href="service.html" class="nav-item nav-link">Services</a>
+                <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
+                    <div class="dropdown-menu rounded-0 rounded-bottom m-0">
+                        <a href="air-ambulance-service.html" class="dropdown-item">Air Ambulance Service</a>
+                        <!-- <a href="#" class="dropdown-item">online Doctor Consultation</a>
+                        <a href="#" class="dropdown-item">Medicine Service</a>
+                        <a href="#" class="dropdown-item">Accommodation Service</a>
+                        <a href="#" class="dropdown-item">Pre Post Arrival Services</a>
+                        <a href="#" class="dropdown-item">Flight Booking</a>
+                        <a href="#" class="dropdown-item">Hotel Booking</a> -->
+
+                    </div>
+                </div>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Treatments</a>
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
@@ -202,12 +222,12 @@
                                         <button type="submit" id="submitBtn" disabled>
                                             Book Consultation
                                         </button>
-                                        <div id="form-message" class="mt-3"></div>
                                     </div>
                                     <div class="sub-2">
                                         <a href="tel:+1-855-888-0114"><img src="img/phone-icon.png"> +1-855-888-0114</a>
                                     </div>
                                 </div>
+                                <div id="form-message" class="mt-3"></div>
                             </div>
                         </div>
                     </form>
@@ -277,7 +297,7 @@
     <!-- About End -->
 
     <!-- Service Start -->
-    <div class="container-xxl py-5">
+    <div class="container-xxl space-1">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                 <p class="d-inline-block border rounded-pill py-1 px-4">Services</p>
@@ -285,7 +305,7 @@
             </div>
             <div class="row g-4">
                 <div class="col-lg-12">
-                    <div class="owl-carousel treatments-carousel" style="transform:none;">
+                    <div class="owl-carousel treatments-carousel">
                         <div class="owl-carousel-item">
                             <div class="sergari">
                                 <img src="img/home-icon-1.png">
@@ -321,7 +341,17 @@
                                 </p>
                             </div>
                         </div>
+                        <div class="owl-carousel-item">
 
+                            <div class="sergari">
+                                <img src="img/home-icon-3.png">
+
+                                <h2 class="size-18">Neuro Surgeries</h2>
+                                <p>
+                                    Adam Vacations Medical facilitates top-tier brain and spine surgeries in India for
+                                    international patients seeking expert care at an affordable cost. </p>
+                            </div>
+                        </div>
 
                     </div>
                 </div>
@@ -433,28 +463,28 @@
                     <div class="owl-carousel media-carousel">
                         <div class="owl-carousel-item">
 
-                            <div class="1111">
-                                <img src="img/air-banner-1.png">
-                                <div class="blue-back">
-                                    <h2>Air Ambulance</h2>
-                                    <ul>
-                                        <li><span><img src="img/tick.png"></span> <span>Emergency medical
-                                                evacuation</span></li>
-                                        <li><span><img src="img/tick.png"></span> <span>Responsive medical treatment
-                                                while travelling</span>
-                                        </li>
-                                        <li><span><img src="img/tick.png"></span> <span>NICU services</span></li>
-                                        <li>
-                                            <span><img src="img/tick.png"></i></span> <span>Better medical escort</span>
-                                        </li>
-                                        <li>
-                                            <span><img src="img/tick.png"></span> <span>Professional medical team to
-                                                steady the
-                                                patient’s critical situation</span>
-                                        </li>
-                                    </ul>
-                                </div>
+
+                            <img src="img/air-banner-1.png">
+                            <div class="blue-back">
+                                <h2>Air Ambulance</h2>
+                                <ul>
+                                    <li><span><img src="img/tick.png"></span> <span>Emergency medical
+                                            evacuation</span></li>
+                                    <li><span><img src="img/tick.png"></span> <span>Responsive medical treatment
+                                            while travelling</span>
+                                    </li>
+                                    <li><span><img src="img/tick.png"></span> <span>NICU services</span></li>
+                                    <li>
+                                        <span><img src="img/tick.png"></i></span> <span>Better medical escort</span>
+                                    </li>
+                                    <li>
+                                        <span><img src="img/tick.png"></span> <span>Professional medical team to
+                                            steady the
+                                            patient’s critical situation</span>
+                                    </li>
+                                </ul>
                             </div>
+
                         </div>
                         <div class="owl-carousel-item">
                             <img src="img/air-banner-2.png">
@@ -501,7 +531,28 @@
                                 </ul>
                             </div>
                         </div>
+                        <div class="owl-carousel-item">
+                            <img src="img/air-banner-4.jpg">
+                            <div class="blue-back">
+                                <h2>Accommodation Service</h2>
+                                <ul>
+                                    <li><span><img src="img/tick.png"></span> <span>Available 24x7</span></li>
+                                    <li><span><img src="img/tick.png"></span> <span>Long-Term Rentals for Rehab &
+                                            Recovery Patients</span>
+                                    </li>
+                                    <li><span><img src="img/tick.png"></span> <span>NICU services</span></li>
+                                    <li>
+                                        <span><img src="img/tick.png"></i></span> <span>Better medical escort</span>
+                                    </li>
+                                    <li>
+                                        <span><img src="img/tick.png"></span> <span>Professional medical team to
+                                            steady the
+                                            patient’s critical situation</span>
+                                    </li>
+                                </ul>
+                            </div>
 
+                        </div>
 
 
                     </div>
@@ -587,9 +638,10 @@
                     <h5 class="text-light mb-4">Services <br>
                         <hr>
                     </h5>
-                    <a class="btn btn-link" href="cardiac-surgery.html">Cardiac Surgery</a>
+                    <a class="btn btn-link size-txt-1" href="service.html">Services</a>
                     <a class="btn btn-link size-txt-1" href="medical-treatment.html">Medical Treatment Cost</a>
                     <a class="btn btn-link size-txt-1" href="refund-policy.html">Refund & Cancellation Policy</a>
+
 
                 </div>
 
