--- a/service.html
+++ b/service.html
@@ -32,21 +32,23 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
-        <link href="css/mobile-responsive.css" rel="stylesheet" />
-<style>
-    .page-header {
-    background: url(img/about-banner.png) top center no-repeat;
-}
-.display-3 {
-    font-size: 2rem;
-    color: #00154c !important;
-    text-align: center;
-}
-.size-14 {
-  
-        color:#333;
-    }
-</style>
+    <link href="css/mobile-responsive.css" rel="stylesheet" />
+    <style>
+        .page-header {
+            background: url(img/about-banner.png) top center no-repeat;
+        }
+
+        .display-3 {
+            font-size: 2rem;
+            color: #00154c !important;
+            text-align: center;
+        }
+
+        .size-14 {
+
+            color: #333;
+        }
+    </style>
 </head>
 
 <body>
@@ -59,11 +61,11 @@
     </div>
     <!-- Spinner End -->
     <!-- Navbar Start -->
-   <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
+    <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
             <img src="img/logo.png" style="width:150px;">
         </a>
-         <div class="phone-header-mobile">
+        <div class="phone-header-mobile">
             <a href="tel:1-855-888-0114"><i class="fa fa-phone"></i></a>
         </div>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -101,66 +103,107 @@
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <h1 class="display-3 text-white mb-3 animated slideInDown">Services</h1>
-           
+
         </div>
     </div>
     <!-- Page Header End -->
 
 
     <!-- Service Start -->
-     <!-- Service Start -->
     <div class="container-xxl py-5">
         <div class="container">
-            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s"
+                style="max-width: 600px; visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
                 <p class="d-inline-block border rounded-pill py-1 px-4">Services</p>
-                <h1 class="size-18">Our Top Treatments</h1>
+                <h1>Our Top Services
+                </h1>
             </div>
             <div class="row g-4">
-                <div class="col-lg-12">
-                    <div class="owl-carousel treatments-carousel" style="transform:none;">
-                        <div class="owl-carousel-item">
-                            <div class="sergari">
-                                <img src="img/home-icon-1.png">
-                                <h2 class="size-18">Cosmetic Surgery Treatment
-                                    In India</h2>
-                                <p class="size-14">
-                                    Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam
-                                    sed stet.
-                                </p>
-                            </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s"
+                    style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
+                    <div class="service-item bg-light rounded h-100 p-5">
+                        <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4"
+                            style="width: 65px; height: 65px;">
+                            <i class="fa fa-ambulance text-primary-new fs-4"></i>
                         </div>
-                        <div class="owl-carousel-item">
-                            <div class="sergari">
-                                <img src="img/home-icon-2.png">
-
-                                <h2 class="size-18">Dental Implants</h2>
-                                                               <p class="size-14">
-
-                                    Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam
-                                    sed stet.
-                                </p>
-                            </div>
+                        <h4 class="mb-3">Air Ambulance Service</h4>
+                        <p class="mb-4">At Adam Vacations Medical, we provide safe, fast, and reliable air ambulance
+                            services for international patients, medical tourists, and critically ill individuals
+                            requiring urgent transportation to or from India. </p>
+                        <a class="btn" href="air-ambulance-service.html"><i class="fa fa-plus text-primary-new me-3"></i>Read More</a>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s"
+                    style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
+                    <div class="service-item bg-light rounded h-100 p-5">
+                        <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4"
+                            style="width: 65px; height: 65px;">
+                            <i class="fa fa-stethoscope text-primary-new fs-4"></i>
                         </div>
-                        <div class="owl-carousel-item">
-
-                            <div class="sergari">
-                                <img src="img/home-icon-3.png">
-
-                                <h2 class="size-18">Liver/Kidney Transplant</h2>
-                                <p>
-                                    Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam
-                                    sed stet.
-                                </p>
-                            </div>
+                        <h4 class="mb-3">Online Doctor Consultation</h4>
+                        <p class="mb-4">Top Specialists from India’s Leading Hospitals
+                            Connect with expert doctors from premier institutions in Delhi, Mumbai, Bangalore, Chennai,
+                            and more.
+                        </p>
+                        <a class="btn" href=""><i class="fa fa-plus text-primary-new me-3"></i>Read More</a>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s"
+                    style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInUp;">
+                    <div class="service-item bg-light rounded h-100 p-5">
+                        <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4"
+                            style="width: 65px; height: 65px;">
+                            <i class="fa fa-pills text-primary-new fs-4"></i>
                         </div>
-                       
-
+                        <h4 class="mb-3">Medicine Service</h4>
+                        <p class="mb-4">In India, the term “Medicine Service” broadly refers to the delivery of medical
+                            care, pharmaceutical services, and related support systems that ensure people get
+                            consultations, treatments.</p>
+                        <a class="btn" href=""><i class="fa fa-plus text-primary-new me-3"></i>Read More</a>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s"
+                    style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
+                    <div class="service-item bg-light rounded h-100 p-5">
+                        <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4"
+                            style="width: 65px; height: 65px;">
+                            <i class="fa fa-hotel text-primary-new fs-4"></i>
+                        </div>
+                        <h4 class="mb-3">Accommodation Service</h4>
+                        <p class="mb-4">At Adam Vacations Medical, we offer trusted accommodation services for
+                            international patients and their attendants visiting India for treatment.</p>
+                        <a class="btn" href=""><i class="fa fa-plus text-primary-new me-3"></i>Read More</a>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s"
+                    style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
+                    <div class="service-item bg-light rounded h-100 p-5">
+                        <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4"
+                            style="width: 65px; height: 65px;">
+                            <i class="fa fa-suitcase text-primary-new fs-4"></i>
+                        </div>
+                        <h4 class="mb-3">Pre Post Arrival Services</h4>
+                        <p class="mb-4">We ensure your stay during treatment in India is safe, clean, and peaceful. Adam
+                            Vacations Medical handles everything—from airport pickup to lodging and hospital visits.</p>
+                        <a class="btn" href=""><i class="fa fa-plus text-primary-new me-3"></i>Read More</a>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s"
+                    style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInUp;">
+                    <div class="service-item bg-light rounded h-100 p-5">
+                        <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4"
+                            style="width: 65px; height: 65px;">
+                            <i class="fa fa-plane text-primary-new fs-4"></i>
+                        </div>
+                        <h4 class="mb-3">Flight Booking</h4>
+                        <p class="mb-4">Need wheelchair access, assistance for elderly patients, or priority boarding?
+                            Our team ensures airlines are informed and all arrangements are made in advance.</p>
+                        <a class="btn" href=""><i class="fa fa-plus text-primary-new me-3"></i>Read More</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Service End -->
     <!-- Service End -->
 
 
@@ -187,7 +230,8 @@
                                     </div>
                                     <div class="ms-4">
                                         <h5 class="text-white-1 mb-2">Affordability</h5>
-                                        <p class="text-white-1 mb-0 size-14">With affordable packages offering proven solutions
+                                        <p class="text-white-1 mb-0 size-14">With affordable packages offering proven
+                                            solutions
                                             we
                                             ensure that each & every patient receive the best health care</p>
 
@@ -202,7 +246,8 @@
                                     </div>
                                     <div class="ms-4">
                                         <h5 class="text-white-1 mb-2">Specialist Consultation</h5>
-                                        <p class="text-white-1 mb-0 size-14">Proper consultation with doctors & pathologists for
+                                        <p class="text-white-1 mb-0 size-14">Proper consultation with doctors &
+                                            pathologists for
                                             the best possible medical facilities allows patient to get an overview about
                                             the complete medical condition.</p>
 
@@ -217,7 +262,8 @@
                                     </div>
                                     <div class="ms-4">
                                         <h5 class="text-white-1 mb-2">State-Of-Art-Medical </h5>
-                                        <p class="text-white-1 mb-0 size-14">With quality infrastructure & best technologies, we
+                                        <p class="text-white-1 mb-0 size-14">With quality infrastructure & best
+                                            technologies, we
                                             offer the patients zone of maximum comfort.</p>
 
                                     </div>
@@ -231,7 +277,8 @@
                                     </div>
                                     <div class="ms-4">
                                         <h5 class="text-white-1 mb-2">Reputed Health Care </h5>
-                                        <p class="text-white-1 mb-0 size-14">With experienced healthcare professionals with you
+                                        <p class="text-white-1 mb-0 size-14">With experienced healthcare professionals
+                                            with you
                                             to access your condition, you can consider to be under positive
                                             surveillance.</p>
 
@@ -301,7 +348,7 @@
     <!-- Testimonial End -->
 
 
-<!-- Footer Start -->
+    <!-- Footer Start -->
     <div class="container-fluid bg-dark text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
