--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
     <!-- Spinner End -->
 
     <!-- Navbar Start -->
-     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
+    <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
             <img src="img/logo.png" style="width:150px;">
         </a>
@@ -85,13 +85,12 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
-                        <a href="air-ambulance-service.html" class="dropdown-item">Air Ambulance Service</a>
-                        <!-- <a href="#" class="dropdown-item">online Doctor Consultation</a>
-                        <a href="#" class="dropdown-item">Medicine Service</a>
-                        <a href="#" class="dropdown-item">Accommodation Service</a>
-                        <a href="#" class="dropdown-item">Pre Post Arrival Services</a>
-                        <a href="#" class="dropdown-item">Flight Booking</a>
-                        <a href="#" class="dropdown-item">Hotel Booking</a> -->
+                       <a href="air-ambulance-service.html" class="dropdown-item">Air Ambulance Service</a>
+                        <a href="online-doctor-consultation.html" class="dropdown-item">Online Doctor Consultation</a>
+                        <a href="accommodation-service.html" class="dropdown-item">Accommodation Service</a>
+                        <a href="pre-post-arrival-services.html" class="dropdown-item">Pre Post Arrival Services</a>
+                        <a href="flight-booking.html" class="dropdown-item">Flight Booking</a>
+                        <a href="hotel-booking.html" class="dropdown-item">Hotel Booking</a>
 
                     </div>
                 </div>
