--- a/service.html
+++ b/service.html
@@ -61,7 +61,7 @@
     </div>
     <!-- Spinner End -->
     <!-- Navbar Start -->
-     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
+    <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
             <img src="img/logo.png" style="width:150px;">
         </a>
@@ -79,13 +79,11 @@
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
                         <a href="air-ambulance-service.html" class="dropdown-item">Air Ambulance Service</a>
-                        <!-- <a href="#" class="dropdown-item">online Doctor Consultation</a>
-                        <a href="#" class="dropdown-item">Medicine Service</a>
-                        <a href="#" class="dropdown-item">Accommodation Service</a>
-                        <a href="#" class="dropdown-item">Pre Post Arrival Services</a>
-                        <a href="#" class="dropdown-item">Flight Booking</a>
-                        <a href="#" class="dropdown-item">Hotel Booking</a> -->
-
+                        <a href="online-doctor-consultation.html" class="dropdown-item">Online Doctor Consultation</a>
+                        <a href="accommodation-service.html" class="dropdown-item">Accommodation Service</a>
+                        <a href="pre-post-arrival-services.html" class="dropdown-item">Pre Post Arrival Services</a>
+                        <a href="flight-booking.html" class="dropdown-item">Flight Booking</a>
+                        <a href="hotel-booking.html" class="dropdown-item">Hotel Booking</a>
                     </div>
                 </div>
                 <div class="nav-item dropdown">
@@ -142,7 +140,8 @@
                         <p class="mb-4">At Adam Vacations Medical, we provide safe, fast, and reliable air ambulance
                             services for international patients, medical tourists, and critically ill individuals
                             requiring urgent transportation to or from India. </p>
-                        <a class="btn" href="air-ambulance-service.html"><i class="fa fa-plus text-primary-new me-3"></i>Read More</a>
+                        <a class="btn" href="air-ambulance-service.html"><i
+                                class="fa fa-plus text-primary-new me-3"></i>Read More</a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s"
@@ -157,7 +156,8 @@
                             Connect with expert doctors from premier institutions in Delhi, Mumbai, Bangalore, Chennai,
                             and more.
                         </p>
-                        <a class="btn" href=""><i class="fa fa-plus text-primary-new me-3"></i>Read More</a>
+                        <a class="btn" href="online-doctor-consultation.html"><i
+                                class="fa fa-plus text-primary-new me-3"></i>Read More</a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s"
@@ -165,13 +165,13 @@
                     <div class="service-item bg-light rounded h-100 p-5">
                         <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4"
                             style="width: 65px; height: 65px;">
-                            <i class="fa fa-pills text-primary-new fs-4"></i>
+                            <i class="fa fa-hotel text-primary-new fs-4"></i>
                         </div>
-                        <h4 class="mb-3">Medicine Service</h4>
-                        <p class="mb-4">In India, the term “Medicine Service” broadly refers to the delivery of medical
-                            care, pharmaceutical services, and related support systems that ensure people get
-                            consultations, treatments.</p>
-                        <a class="btn" href=""><i class="fa fa-plus text-primary-new me-3"></i>Read More</a>
+                        <h4 class="mb-3">Hotel Booking </h4>
+                        <p class="mb-4">At Adam Vacations, we understand that comfort and convenience are essential for
+                            patients and their companions during medical travel. </p>
+                        <a class="btn" href="hotel-booking.html"><i class="fa fa-plus text-primary-new me-3"></i>Read
+                            More</a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s"
@@ -179,12 +179,13 @@
                     <div class="service-item bg-light rounded h-100 p-5">
                         <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4"
                             style="width: 65px; height: 65px;">
-                            <i class="fa fa-hotel text-primary-new fs-4"></i>
+                            <i class="fa fa-bath text-primary-new fs-4"></i>
                         </div>
                         <h4 class="mb-3">Accommodation Service</h4>
                         <p class="mb-4">At Adam Vacations Medical, we offer trusted accommodation services for
                             international patients and their attendants visiting India for treatment.</p>
-                        <a class="btn" href=""><i class="fa fa-plus text-primary-new me-3"></i>Read More</a>
+                        <a class="btn" href="accommodation-service.html"><i
+                                class="fa fa-plus text-primary-new me-3"></i>Read More</a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s"
@@ -192,12 +193,13 @@
                     <div class="service-item bg-light rounded h-100 p-5">
                         <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4"
                             style="width: 65px; height: 65px;">
-                            <i class="fa fa-suitcase text-primary-new fs-4"></i>
+                            <i class="fa fa-coffee text-primary-new fs-4"></i>
                         </div>
                         <h4 class="mb-3">Pre Post Arrival Services</h4>
                         <p class="mb-4">We ensure your stay during treatment in India is safe, clean, and peaceful. Adam
                             Vacations Medical handles everything—from airport pickup to lodging and hospital visits.</p>
-                        <a class="btn" href=""><i class="fa fa-plus text-primary-new me-3"></i>Read More</a>
+                        <a class="btn" href="pre-post-arrival-services.html"><i
+                                class="fa fa-plus text-primary-new me-3"></i>Read More</a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s"
@@ -210,7 +212,8 @@
                         <h4 class="mb-3">Flight Booking</h4>
                         <p class="mb-4">Need wheelchair access, assistance for elderly patients, or priority boarding?
                             Our team ensures airlines are informed and all arrangements are made in advance.</p>
-                        <a class="btn" href=""><i class="fa fa-plus text-primary-new me-3"></i>Read More</a>
+                        <a class="btn" href="flight-booking.html"><i class="fa fa-plus text-primary-new me-3"></i>Read
+                            More</a>
                     </div>
                 </div>
             </div>
@@ -361,7 +364,7 @@
 
 
     <!-- Footer Start -->
-     <div class="container-fluid bg-dark text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid bg-dark text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
