--- a/cardiac-surgery.html
+++ b/cardiac-surgery.html
@@ -32,23 +32,25 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
-                <link href="css/mobile-responsive.css" rel="stylesheet" />
-<style>
-     .page-header {
+    <link href="css/mobile-responsive.css" rel="stylesheet" />
+    <style>
+        .page-header {
             background: url(img/about-banner.png) top center no-repeat;
         }
-     .display-3 {
+
+        .display-3 {
             font-size: 2rem;
             color: #00154c !important;
             text-align: center;
         }
-     @media (max-width:767px) {
+
+        @media (max-width:767px) {
             .display-3 {
                 font-size: 18px;
-                color:#000;
+                color: #000;
             }
         }
-</style>
+    </style>
 </head>
 
 <body>
@@ -82,13 +84,12 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
-                        <a href="air-ambulance-service.html" class="dropdown-item">Air Ambulance Service</a>
-                        <!-- <a href="#" class="dropdown-item">online Doctor Consultation</a>
-                        <a href="#" class="dropdown-item">Medicine Service</a>
-                        <a href="#" class="dropdown-item">Accommodation Service</a>
-                        <a href="#" class="dropdown-item">Pre Post Arrival Services</a>
-                        <a href="#" class="dropdown-item">Flight Booking</a>
-                        <a href="#" class="dropdown-item">Hotel Booking</a> -->
+                      <a href="air-ambulance-service.html" class="dropdown-item">Air Ambulance Service</a>
+                        <a href="online-doctor-consultation.html" class="dropdown-item">Online Doctor Consultation</a>
+                        <a href="accommodation-service.html" class="dropdown-item">Accommodation Service</a>
+                        <a href="pre-post-arrival-services.html" class="dropdown-item">Pre Post Arrival Services</a>
+                        <a href="flight-booking.html" class="dropdown-item">Flight Booking</a>
+                        <a href="hotel-booking.html" class="dropdown-item">Hotel Booking</a>
 
                     </div>
                 </div>
@@ -118,7 +119,7 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
-            <h1 class="display-3 text-white mb-3 animated slideInDown">Cardiac Surgery in India</h1>
+            <h1 class="display-3 text-white mb-3 animated slideInDown">Cardiac Surgery</h1>
 
         </div>
     </div>
@@ -327,12 +328,12 @@
                         <h2>Start Your Heart Care Journey Today</h2>
                         <p>Adam Vacations Medical is committed to helping you regain your health with dignity,
                             compassion, and world-class care.</p>
-                            <strong>Contact us now for a free treatment plan or second opinion.</strong>
-                            <ul>
-                                <li>Email: medical@adamvacations.com</li>
-                                <li>USA Toll-Free: +1 855 888 0114</li>
-                            </ul>
-                            <strong>Website: medical.adamvacations.com/cardiac-surgery</strong>
+                        <strong>Contact us now for a free treatment plan or second opinion.</strong>
+                        <ul>
+                            <li>Email: medical@adamvacations.com</li>
+                            <li>USA Toll-Free: +1 855 888 0114</li>
+                        </ul>
+                        <strong>Website: medical.adamvacations.com/cardiac-surgery</strong>
 
 
                     </div>
@@ -343,8 +344,8 @@
     <!-- Contact End -->
 
 
-<!-- Footer Start -->
-        <div class="container-fluid bg-dark text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
+    <!-- Footer Start -->
+    <div class="container-fluid bg-dark text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
