--- a/flight-booking.html
+++ b/flight-booking.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Klinik - Clinic Website Template</title>
+    <title>Flight Booking Assistance for Medical Travel</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -33,7 +33,24 @@
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
     <link href="css/mobile-responsive.css" rel="stylesheet" />
+    <style>
+        .page-header {
+            background: url(img/about-banner.png) top center no-repeat;
+        }
 
+        .display-3 {
+            font-size: 2rem;
+            color: #00154c !important;
+            text-align: center;
+        }
+
+        @media (max-width:767px) {
+            .display-3 {
+                font-size: 18px;
+                color: #000;
+            }
+        }
+    </style>
 </head>
 
 <body>
@@ -45,11 +62,6 @@
         </div>
     </div>
     <!-- Spinner End -->
-
-
-
-
-
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
@@ -68,7 +80,7 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
-                      <a href="air-ambulance-service.html" class="dropdown-item">Air Ambulance Service</a>
+                     <a href="air-ambulance-service.html" class="dropdown-item">Air Ambulance Service</a>
                         <a href="online-doctor-consultation.html" class="dropdown-item">Online Doctor Consultation</a>
                         <a href="accommodation-service.html" class="dropdown-item">Accommodation Service</a>
                         <a href="pre-post-arrival-services.html" class="dropdown-item">Pre Post Arrival Services</a>
@@ -103,103 +115,152 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
-            <h1 class="display-3 text-white mb-3 animated slideInDown">Appointment</h1>
-            <nav aria-label="breadcrumb animated slideInDown">
-                <ol class="breadcrumb text-uppercase mb-0">
-                    <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
-                    <li class="breadcrumb-item text-primary active" aria-current="page">Appointment</li>
-                </ol>
-            </nav>
+            <h1 class="display-3 text-white mb-3 animated slideInDown">Flight Booking Assistance for Medical Travel
+            </h1>
+
         </div>
     </div>
     <!-- Page Header End -->
 
 
-    <!-- Appointment Start -->
-    <div class="container-xxl py-5">
+    <!-- Contact Start -->
+    <div class="container-xxl">
         <div class="container">
-            <div class="row g-5">
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <p class="d-inline-block border rounded-pill py-1 px-4">Appointment</p>
-                    <h1 class="mb-4">Make An Appointment To Visit Our Doctor</h1>
-                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et
-                        eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet
-                    </p>
-                    <div class="bg-light rounded d-flex align-items-center p-5 mb-4">
-                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-white"
-                            style="width: 55px; height: 55px;">
-                            <i class="fa fa-phone-alt text-primary"></i>
-                        </div>
-                        <div class="ms-4">
-                            <p class="mb-2">Call Us Now</p>
-                            <h5 class="mb-0">+1 855 888 0114</h5>
-                        </div>
-                    </div>
-                    <div class="bg-light rounded d-flex align-items-center p-5">
-                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-white"
-                            style="width: 55px; height: 55px;">
-                            <i class="fa fa-envelope-open text-primary"></i>
-                        </div>
-                        <div class="ms-4">
-                            <p class="mb-2">Mail Us Now</p>
-                            <h5 class="mb-0">medical@adamvacations.com</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="bg-light rounded h-100 d-flex align-items-center p-5">
-                        <form>
-                            <div class="row g-3">
-                                <div class="col-12 col-sm-6">
-                                    <input type="text" class="form-control border-0" placeholder="Your Name"
-                                        style="height: 55px;">
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <input type="email" class="form-control border-0" placeholder="Your Email"
-                                        style="height: 55px;">
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <input type="text" class="form-control border-0" placeholder="Your Mobile"
-                                        style="height: 55px;">
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <select class="form-select border-0" style="height: 55px;">
-                                        <option selected>Choose Doctor</option>
-                                        <option value="1">Doctor 1</option>
-                                        <option value="2">Doctor 2</option>
-                                        <option value="3">Doctor 3</option>
-                                    </select>
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <div class="date" id="date" data-target-input="nearest">
-                                        <input type="text" class="form-control border-0 datetimepicker-input"
-                                            placeholder="Choose Date" data-target="#date" data-toggle="datetimepicker"
-                                            style="height: 55px;">
-                                    </div>
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <div class="time" id="time" data-target-input="nearest">
-                                        <input type="text" class="form-control border-0 datetimepicker-input"
-                                            placeholder="Choose Date" data-target="#time" data-toggle="datetimepicker"
-                                            style="height: 55px;">
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <textarea class="form-control border-0" rows="5"
-                                        placeholder="Describe your problem"></textarea>
-                                </div>
-                                <div class="col-12">
-                                    <button class="btn btn-primary w-100 py-3" type="submit">Book Appointment</button>
-                                </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="terms">
+
+                        <h2>Flight Booking Assistance for Medical Travel</h2>
+                        <p>At Adam Vacations, we understand that traveling to another country for medical treatment can
+                            be a stressful process — not just for the patient but also for their family or companion.
+                            That’s why we offer end-to-end flight booking services tailored exclusively for
+                            international medical travelers coming to India.</p>
+
+                        <h2>What We Offer</h2>
+                        <strong>Affordable Flight Options</strong>
+                        <p>
+                            We help you book cost-effective flight tickets for both patients and their companions,
+                            ensuring safe and comfortable travel to India’s major medical hubs such as Delhi, Mumbai,
+                            Bengaluru, Chennai, Hyderabad, Indore, and Gurgaon.
+
+                        </p>
+                        <strong>Flexible Booking & Rescheduling</strong>
+                        <p>
+                            We know medical appointments may shift. Our flight partners offer flexible date changes and
+                            zero/low cancellation fees for medical travelers (terms apply).
+                        </p>
+                        <strong>Group & Family Bookings</strong>
+                        <p>
+                            Travelling with family? We offer special rates for group bookings, ensuring that your loved
+                            ones can travel with you at an affordable cost.
+                        </p>
+                        <strong>Special Assistance During Travel</strong>
+                        <p>
+                            Need wheelchair access, assistance for elderly patients, or priority boarding? Our team
+                            ensures airlines are informed and all arrangements are made in advance.
+                        </p>
+                        <strong>Airport Transfers & Meet-and-Greet</strong>
+                        <p>
+                            Upon arrival in India, we also arrange airport pick-up, meet-and-greet services, and
+                            ambulance transfers if needed — giving you a smooth transition from air to care.
+                        </p>
+                        <strong>Supported Destinations</strong>
+                        <p>We provide flight booking assistance for patients coming from the USA, UK, UAE, Canada,
+                            Australia, South Africa, and many other countries, heading to top Indian hospitals in:</p>
+                        <div class="row mt-5">
+                            <div class="col-lg-6">
+                                <h2>Cities Covered
+                                </h2>
+                                <ul>
+                                    <li>
+                                        Delhi NCR (Gurgaon, Noida)
+
+                                    </li>
+                                    <li>
+                                        Mumbai
+
+                                    </li>
+                                    <li>
+                                        Bangalore
+
+                                    </li>
+                                    <li>
+                                        Hyderabad
+
+                                    </li>
+                                    <li>
+                                        Chennai
+
+                                    </li>
+                                    <li>
+                                        Kochi
+                                    </li>
+                                    <li>
+                                        Ahmedabad
+                                    </li>
+                                </ul>
                             </div>
-                        </form>
+                            <div class="col-lg-6">
+                                <img src="img/air-banner-4.jpg" class="img-fluid rounded">
+                            </div>
+                        </div>
+                        <div class="row mt-5">
+                            <div class="col-lg-6">
+                                <img src="img/air-banner-1.png" class="img-fluid rounded">
+                            </div>
+                            <div class="col-lg-6">
+                                <h2>Required Details for Booking</h2>
+                                <p>To help us book your flights, please share:</p>
+                                <ul>
+                                    <li>
+                                        Passenger name(s) as per passport
+                                    </li>
+                                    <li>
+                                        Travel dates (tentative or confirmed)
+
+                                    </li>
+                                    <li>
+                                        Preferred airports (departure & arrival)
+                                    </li>
+                                    <li>
+                                        Medical condition (for assistance needs)
+                                    </li>
+                                    <li>Companion details (if any)</li>
+                                </ul>
+
+                            </div>
+                            <div class="col-lg-12 mt-5">
+                                <address>
+                                    <strong>Contact Our Flight Desk</strong>
+                                    <br><br>
+                                    <p>
+                                        Get in touch at medical@adamvacations.com or <strong> +1-855-888-0114
+                                        </strong>(USA Toll-Free) for
+                                        your personalized flight booking quote.
+                                    </p>
+
+                                    <p>
+                                        Let us take care of your travel — so you can focus on healing.
+                                    </p>
+
+                                </address>
+                            </div>
+
+
+
+
+                        </div>
+
+
                     </div>
+
+
                 </div>
             </div>
         </div>
     </div>
-    <!-- Appointment End -->
+    </div>
+    <!-- Contact End -->
 
 
     <!-- Footer Start -->
