--- a/online-doctor-consultation.html
+++ b/online-doctor-consultation.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Klinik - Clinic Website Template</title>
+    <title>Online Doctor Consultation for International Patients</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -33,7 +33,24 @@
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
     <link href="css/mobile-responsive.css" rel="stylesheet" />
+    <style>
+        .page-header {
+            background: url(img/about-banner.png) top center no-repeat;
+        }
 
+        .display-3 {
+            font-size: 2rem;
+            color: #00154c !important;
+            text-align: center;
+        }
+
+        @media (max-width:767px) {
+            .display-3 {
+                font-size: 18px;
+                color: #000;
+            }
+        }
+    </style>
 </head>
 
 <body>
@@ -45,11 +62,6 @@
         </div>
     </div>
     <!-- Spinner End -->
-
-
-
-
-
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
@@ -68,7 +80,7 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
-                      <a href="air-ambulance-service.html" class="dropdown-item">Air Ambulance Service</a>
+                       <a href="air-ambulance-service.html" class="dropdown-item">Air Ambulance Service</a>
                         <a href="online-doctor-consultation.html" class="dropdown-item">Online Doctor Consultation</a>
                         <a href="accommodation-service.html" class="dropdown-item">Accommodation Service</a>
                         <a href="pre-post-arrival-services.html" class="dropdown-item">Pre Post Arrival Services</a>
@@ -103,103 +115,136 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
-            <h1 class="display-3 text-white mb-3 animated slideInDown">Appointment</h1>
-            <nav aria-label="breadcrumb animated slideInDown">
-                <ol class="breadcrumb text-uppercase mb-0">
-                    <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
-                    <li class="breadcrumb-item text-primary active" aria-current="page">Appointment</li>
-                </ol>
-            </nav>
+            <h1 class="display-3 text-white mb-3 animated slideInDown">Online Doctor Consultation
+            </h1>
+
         </div>
     </div>
     <!-- Page Header End -->
 
 
-    <!-- Appointment Start -->
-    <div class="container-xxl py-5">
+    <!-- Contact Start -->
+    <div class="container-xxl">
         <div class="container">
-            <div class="row g-5">
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <p class="d-inline-block border rounded-pill py-1 px-4">Appointment</p>
-                    <h1 class="mb-4">Make An Appointment To Visit Our Doctor</h1>
-                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et
-                        eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet
-                    </p>
-                    <div class="bg-light rounded d-flex align-items-center p-5 mb-4">
-                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-white"
-                            style="width: 55px; height: 55px;">
-                            <i class="fa fa-phone-alt text-primary"></i>
-                        </div>
-                        <div class="ms-4">
-                            <p class="mb-2">Call Us Now</p>
-                            <h5 class="mb-0">+1 855 888 0114</h5>
-                        </div>
-                    </div>
-                    <div class="bg-light rounded d-flex align-items-center p-5">
-                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-white"
-                            style="width: 55px; height: 55px;">
-                            <i class="fa fa-envelope-open text-primary"></i>
-                        </div>
-                        <div class="ms-4">
-                            <p class="mb-2">Mail Us Now</p>
-                            <h5 class="mb-0">medical@adamvacations.com</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="bg-light rounded h-100 d-flex align-items-center p-5">
-                        <form>
-                            <div class="row g-3">
-                                <div class="col-12 col-sm-6">
-                                    <input type="text" class="form-control border-0" placeholder="Your Name"
-                                        style="height: 55px;">
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <input type="email" class="form-control border-0" placeholder="Your Email"
-                                        style="height: 55px;">
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <input type="text" class="form-control border-0" placeholder="Your Mobile"
-                                        style="height: 55px;">
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <select class="form-select border-0" style="height: 55px;">
-                                        <option selected>Choose Doctor</option>
-                                        <option value="1">Doctor 1</option>
-                                        <option value="2">Doctor 2</option>
-                                        <option value="3">Doctor 3</option>
-                                    </select>
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <div class="date" id="date" data-target-input="nearest">
-                                        <input type="text" class="form-control border-0 datetimepicker-input"
-                                            placeholder="Choose Date" data-target="#date" data-toggle="datetimepicker"
-                                            style="height: 55px;">
-                                    </div>
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <div class="time" id="time" data-target-input="nearest">
-                                        <input type="text" class="form-control border-0 datetimepicker-input"
-                                            placeholder="Choose Date" data-target="#time" data-toggle="datetimepicker"
-                                            style="height: 55px;">
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <textarea class="form-control border-0" rows="5"
-                                        placeholder="Describe your problem"></textarea>
-                                </div>
-                                <div class="col-12">
-                                    <button class="btn btn-primary w-100 py-3" type="submit">Book Appointment</button>
-                                </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="terms">
+
+                        <h2>Online Doctor Consultation for International Patients</h2>
+                        <p>Bringing Expert Indian Medical Advice to Your Home – Anywhere in the World</p>
+
+                        <div class="row mt-5">
+                            <div class="col-lg-7">
+                                <h2>Why Choose Online Doctor Consultation with Us?</h2>
+                                <strong>Top Specialists from India’s Leading Hospitals</strong>
+                                <p> Domestic ICU Air Ambulance (within India)</p>
+                                <strong>Personalized Medical Advice</strong>
+                                <p>Share your reports, scans, and symptoms in advance. Our doctors provide tailored
+                                    treatment recommendations and second opinions.</p>
+                                <strong>Time & Cost Efficient</strong>
+                                <p>Save on travel expenses by receiving trusted guidance before deciding to come to
+                                    India.</p>
+                                <strong>Multilingual Support</strong>
+                                <p>Consultations are available in English, Arabic, French, and more.</p>
+                                <strong>Fast Appointment Scheduling</strong>
+                                <p>Get connected with a doctor within 24–48 hours of sharing your reports.</p>
                             </div>
-                        </form>
+                            <div class="col-lg-5">
+                                <img src="img/about-2.png" class="img-fluid rounded-circle">
+                            </div>
+                            <div class="col-lg-6">
+                                <h2>Who Can Use This Service?</h2>
+                                <ul>
+                                    <li>
+                                        Patients planning to travel to India for treatments like cancer, heart surgery,
+                                        IVF, etc.
+                                    </li>
+                                    <li>
+                                        Patients seeking a second medical opinion
+
+                                    </li>
+                                    <li>
+                                        Those unsure whether they need to travel
+
+                                    </li>
+                                    <li>
+                                        Family members managing the patient's care
+
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col-lg-6">
+                                <h2>Benefits for Medical Travelers
+                                </h2>
+                                <ul>
+                                    <li>
+                                        Clarifies the need for travel
+
+                                    </li>
+                                    <li>
+                                        Get cost and treatment estimates in advance
+
+                                    </li>
+                                    <li>
+                                        Smooth visa and appointment planning
+
+                                    </li>
+                                    <li>
+                                        Builds trust with your future doctor
+
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col-lg-6 mt-5">
+                                <h3>How It Works</h3>
+                                <strong>Submit Your Reports</strong>
+                                <p>Upload or email your medical documents securely.</p>
+                                <strong>Choose a Specialist</strong>
+                                <p>We’ll help match you with the right doctor.</p>
+                                <strong>Book a Time Slot</strong>
+                                <p>Choose a suitable time for your video consultation.</p>
+                                <strong>Video Call with Doctor</strong>
+                                <p>Speak directly via Zoom, Google Meet, or WhatsApp.</p>
+                                <strong>Receive a Summary</strong>
+                                <p>Get a written report and recommendations after your session.</p>
+                            </div>
+                            <div class="col-lg-6 mt-5">
+                                <img src="img/banner-home-big.png" class="img-fluid rounded">
+
+                            </div>
+                            <div class="col-lg-12">
+                                <address class="mt-3">
+                                    <strong>Book Your Consultation Now
+                                    </strong>
+                                    <br>
+                                    <p>
+                                        Start your medical journey with clarity and confidence.
+                                    </p>
+                                    <p>
+                                        Email: <a href="mailto:medical@adamvacations.com">medical@adamvacations.com</a>
+
+                                    <p>
+                                        Call / WhatsApp: <a href="tel:+1-855-888-0114">
+                                            +1-855-888-0114
+                                        </a>
+
+                                    </p>
+
+                                </address>
+                            </div>
+
+                        </div>
+
+
                     </div>
+
+
                 </div>
             </div>
         </div>
     </div>
-    <!-- Appointment End -->
+    </div>
+    <!-- Contact End -->
 
 
     <!-- Footer Start -->
