--- a/refund-policy.html
+++ b/refund-policy.html
@@ -32,27 +32,30 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
-                <link href="css/mobile-responsive.css" rel="stylesheet" />
-<style>
-    .page-header {
-    background: url(img/about-banner.png) top center no-repeat;
-}
-.display-3 {
-    font-size: 2rem;
-    color: #00154c !important;
-    text-align: center;
-}
-.size-14 {
-  
-        color:#333;
-    }
-     @media (max-width:767px) {
+    <link href="css/mobile-responsive.css" rel="stylesheet" />
+    <style>
+        .page-header {
+            background: url(img/about-banner.png) top center no-repeat;
+        }
+
+        .display-3 {
+            font-size: 2rem;
+            color: #00154c !important;
+            text-align: center;
+        }
+
+        .size-14 {
+
+            color: #333;
+        }
+
+        @media (max-width:767px) {
             .display-3 {
                 font-size: 18px;
-                color:#000;
+                color: #000;
             }
         }
-</style>
+    </style>
 </head>
 
 <body>
@@ -83,12 +86,11 @@
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
                         <a href="air-ambulance-service.html" class="dropdown-item">Air Ambulance Service</a>
-                        <!-- <a href="#" class="dropdown-item">online Doctor Consultation</a>
-                        <a href="#" class="dropdown-item">Medicine Service</a>
-                        <a href="#" class="dropdown-item">Accommodation Service</a>
-                        <a href="#" class="dropdown-item">Pre Post Arrival Services</a>
-                        <a href="#" class="dropdown-item">Flight Booking</a>
-                        <a href="#" class="dropdown-item">Hotel Booking</a> -->
+                        <a href="online-doctor-consultation.html" class="dropdown-item">Online Doctor Consultation</a>
+                        <a href="accommodation-service.html" class="dropdown-item">Accommodation Service</a>
+                        <a href="pre-post-arrival-services.html" class="dropdown-item">Pre Post Arrival Services</a>
+                        <a href="flight-booking.html" class="dropdown-item">Flight Booking</a>
+                        <a href="hotel-booking.html" class="dropdown-item">Hotel Booking</a>
 
                     </div>
                 </div>
@@ -350,8 +352,8 @@
     <!-- Contact End -->
 
 
- <!-- Footer Start -->
-       <div class="container-fluid bg-dark text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
+    <!-- Footer Start -->
+    <div class="container-fluid bg-dark text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
