--- a/testimonial.html
+++ b/testimonial.html
@@ -32,21 +32,23 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
-                <link href="css/mobile-responsive.css" rel="stylesheet" />
-<style>
-    .page-header {
-    background: url(img/about-banner.png) top center no-repeat;
-}
-.display-3 {
-    font-size: 2rem;
-    color: #00154c !important;
-    text-align: center;
-}
-.size-14 {
-  
-        color:#333;
-    }
-</style>
+    <link href="css/mobile-responsive.css" rel="stylesheet" />
+    <style>
+        .page-header {
+            background: url(img/about-banner.png) top center no-repeat;
+        }
+
+        .display-3 {
+            font-size: 2rem;
+            color: #00154c !important;
+            text-align: center;
+        }
+
+        .size-14 {
+
+            color: #333;
+        }
+    </style>
 </head>
 
 <body>
@@ -113,13 +115,12 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
-                        <a href="air-ambulance-service.html" class="dropdown-item">Air Ambulance Service</a>
-                        <!-- <a href="#" class="dropdown-item">online Doctor Consultation</a>
-                        <a href="#" class="dropdown-item">Medicine Service</a>
-                        <a href="#" class="dropdown-item">Accommodation Service</a>
-                        <a href="#" class="dropdown-item">Pre Post Arrival Services</a>
-                        <a href="#" class="dropdown-item">Flight Booking</a>
-                        <a href="#" class="dropdown-item">Hotel Booking</a> -->
+                      <a href="air-ambulance-service.html" class="dropdown-item">Air Ambulance Service</a>
+                        <a href="online-doctor-consultation.html" class="dropdown-item">Online Doctor Consultation</a>
+                        <a href="accommodation-service.html" class="dropdown-item">Accommodation Service</a>
+                        <a href="pre-post-arrival-services.html" class="dropdown-item">Pre Post Arrival Services</a>
+                        <a href="flight-booking.html" class="dropdown-item">Flight Booking</a>
+                        <a href="hotel-booking.html" class="dropdown-item">Hotel Booking</a>
 
                     </div>
                 </div>
@@ -210,7 +211,7 @@
 
 
     <!-- Footer Start -->
-     <div class="container-fluid bg-dark text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid bg-dark text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
