--- a/index.html
+++ b/index.html
@@ -152,12 +152,12 @@
                                 <select class="form-select" id="nationality" name="nationality" style="height: 55px;"
                                     required>
                                     <option value="">Select your nationality</option>
-                                    <option value="America">America</option>
-                                    <option value="Britain">Britain</option>
+                                    <option value="USA">USA</option>
+                                    <option value="UK">UK</option>
+                                    <option value="UAE">UAE</option>
                                     <option value="Canada">Canada</option>
-                                    <option value="Dubai">Dubai</option>
+                                    <option value="Australia">Australia</option>
                                     <option value="India">India</option>
-                                    <option value="Spain">Spain</option>
                                 </select>
                                 <div class="invalid-feedback">
                                     Please select your nationality
