--- a/accommodation-service.html
+++ b/accommodation-service.html
@@ -64,52 +64,7 @@
     </div>
     <!-- Spinner End -->
     <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
-        <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <img src="img/logo.png" style="width:150px;">
-        </a>
-        <div class="phone-header-mobile">
-            <a href="tel:1-855-888-0114"><i class="fa fa-phone"></i></a>
-        </div>
-        <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link active">Home</a>
-                <a href="about.html" class="nav-item nav-link">About Us</a>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
-                    <div class="dropdown-menu rounded-0 rounded-bottom m-0">
-                        <a href="air-ambulance-service.html" class="dropdown-item">Air Ambulance Service</a>
-                        <a href="online-doctor-consultation.html" class="dropdown-item">Online Doctor Consultation</a>
-                        <a href="accommodation-service.html" class="dropdown-item">Accommodation Service</a>
-                        <a href="pre-post-arrival-services.html" class="dropdown-item">Pre Post Arrival Services</a>
-                        <a href="flight-booking.html" class="dropdown-item">Flight Booking</a>
-                        <a href="hotel-booking.html" class="dropdown-item">Hotel Booking</a>
-
-                    </div>
-                </div>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Treatments</a>
-                    <div class="dropdown-menu rounded-0 rounded-bottom m-0">
-                        <a href="cardiac-surgery.html" class="dropdown-item">Cardiac Surgery</a>
-                        <!-- <a href="team.html" class="dropdown-item">Our Doctor</a>
-                        <a href="appointment.html" class="dropdown-item">Appointment</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a> -->
-                    </div>
-                </div>
-                <a href="contact.html" class="nav-item nav-link">Contact</a>
-            </div>
-            <div class="d-none d-lg-block call-top">
-                <span>Request a call back</span>
-                <a href="tel:+1-855-888-0114">
-                    +1-855-888-0114
-                </a>
-            </div>
-        </div>
-    </nav>
+  <div id="header"></div>
     <!-- Navbar End -->
 
 
@@ -365,78 +320,8 @@
     </div>
     <!-- Contact End -->
 
-
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
-        <div class="container py-5">
-            <div class="row g-5">
-                <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">About Us <br>
-                        <hr>
-                    </h5>
-
-                    <p class="size-txt">Adam Vacations is a fully accredited & certified medical tourism company based
-                        in
-                        India. We offer
-                        tailored options for patients looking for competitive & quality medical treatment.</p>
-
-                </div>
-
-                <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Services <br>
-                        <hr>
-                    </h5>
-                    <a class="btn btn-link size-txt-1" href="service.html">Services</a>
-                    <a class="btn btn-link size-txt-1" href="medical-treatment.html">Medical Treatment Cost</a>
-                    <a class="btn btn-link size-txt-1" href="refund-policy.html">Refund & Cancellation Policy</a>
-
-
-                </div>
-
-                <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Quick Links <br>
-                        <hr>
-                    </h5>
-                    <a class="btn btn-link size-txt-1" href="about.html">About Us</a>
-                    <a class="btn btn-link size-txt-1" href="contact.html">Contact Us</a>
-                    <a class="btn btn-link size-txt-1" href="privacy-policy.html">Privacy Policy</a>
-                    <a class="btn btn-link size-txt-1" href="termsandconditions.html">Terms & Condition</a>
-
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Address <br>
-                        <hr>
-                    </h5>
-                    <p class="mb-2 adgest size-txt-1"><i class="fa fa-map-marker-alt me-3"></i>Unit 16A, 16B / 17A
-                        Ground Floor,
-                        Tower B3,
-                        Spaze Itech Park, Sector 49, Gurugram, Haryana 122018, India
-                    </p>
-                    <p class="mb-2 adgest size-txt-1"><i class="fa fa-phone-alt me-3"></i>+1-855-888-0114</p>
-                    <p class="mb-2 adgest size-txt-1"><i class="fa fa-envelope me-3"></i>medical@adamvacations.com</p>
-                    <div class="d-flex pt-2">
-                        <a class="btn btn-outline-light btn-social rounded-circle" href=""><i
-                                class="fab fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social rounded-circle" href=""><i
-                                class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social rounded-circle" href=""><i
-                                class="fab fa-youtube"></i></a>
-                        <a class="btn btn-outline-light btn-social rounded-circle" href=""><i
-                                class="fab fa-linkedin-in"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="copyright">
-                <div class="row">
-                    <div class="col-md-12 text-center text-md-start mb-3 mb-md-0 size-txt-1">
-                        &copy; medical@adamvacations.com, All Right Reserved.
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <div id="footer"></div>
     <!-- Footer End -->
 
 
