--- a/thankyou.html
+++ b/thankyou.html
@@ -76,54 +76,9 @@
     </div>
   </div>
   <!-- Spinner End -->
-  <!-- Navbar Start -->
-  <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
-    <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-      <img src="img/logo.png" style="width:150px;">
-    </a>
-    <div class="phone-header-mobile">
-      <a href="tel:1-855-888-0114"><i class="fa fa-phone"></i></a>
-    </div>
-    <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarCollapse">
-      <div class="navbar-nav ms-auto p-4 p-lg-0">
-        <a href="index.html" class="nav-item nav-link active">Home</a>
-        <a href="about.html" class="nav-item nav-link">About Us</a>
-        <div class="nav-item dropdown">
-          <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
-          <div class="dropdown-menu rounded-0 rounded-bottom m-0">
-            <a href="air-ambulance-service.html" class="dropdown-item">Air Ambulance Service</a>
-            <a href="online-doctor-consultation.html" class="dropdown-item">Online Doctor Consultation</a>
-            <a href="accommodation-service.html" class="dropdown-item">Accommodation Service</a>
-            <a href="pre-post-arrival-services.html" class="dropdown-item">Pre Post Arrival Services</a>
-            <a href="flight-booking.html" class="dropdown-item">Flight Booking</a>
-            <a href="hotel-booking.html" class="dropdown-item">Hotel Booking</a>
-
-          </div>
-        </div>
-        <div class="nav-item dropdown">
-          <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Treatments</a>
-          <div class="dropdown-menu rounded-0 rounded-bottom m-0">
-            <a href="cardiac-surgery.html" class="dropdown-item">Cardiac Surgery</a>
-            <!-- <a href="team.html" class="dropdown-item">Our Doctor</a>
-                        <a href="appointment.html" class="dropdown-item">Appointment</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a> -->
-          </div>
-        </div>
-        <a href="contact.html" class="nav-item nav-link">Contact</a>
-      </div>
-      <div class="d-none d-lg-block call-top">
-        <span>Request a call back</span>
-        <a href="tel:+1-855-888-0114">
-          +1-855-888-0114
-        </a>
-      </div>
-    </div>
-  </nav>
-  <!-- Navbar End -->
+    <!-- Navbar Start -->
+  <div id="header"></div>
+    <!-- Navbar End -->
   <div class="thanks-top">
     <div class="container">
       <div class="row">
