--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
   <link href="css/mobile-responsive.css" rel="stylesheet" />
   <style>
     .page-header {
-      background: url(img/about-banner.png) top center no-repeat;
+      background: url(img/about-banner.png) top center no-repeat!important;
     }
 
     .display-3 {
