--- a/cardiac-surgery.html
+++ b/cardiac-surgery.html
@@ -34,8 +34,8 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/mobile-responsive.css" rel="stylesheet" />
     <style>
-        .page-header {
-            background: url(img/about-banner.png) top center no-repeat;
+       .page-header {
+            background: url(img/about-banner.png) top center no-repeat !important;
         }
 
         .display-3 {
