--- a/refund-policy.html
+++ b/refund-policy.html
@@ -35,7 +35,7 @@
     <link href="css/mobile-responsive.css" rel="stylesheet" />
     <style>
         .page-header {
-            background: url(img/about-banner.png) top center no-repeat;
+            background: url(img/about-banner.png) top center no-repeat!important;
         }
 
         .display-3 {
