--- a/thankyou.html
+++ b/thankyou.html
@@ -255,72 +255,7 @@
   <div class="Clearfix"></div>
 
   <!-- Footer Start -->
-  <div class="container-fluid bg-dark text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
-    <div class="container py-5">
-      <div class="row g-5">
-        <div class="col-lg-3 col-md-6">
-          <h5 class="text-light mb-4">About Us <br>
-            <hr>
-          </h5>
-
-          <p class="size-txt">Adam Vacations is a fully accredited & certified medical tourism company based
-            in
-            India. We offer
-            tailored options for patients looking for competitive & quality medical treatment.</p>
-
-        </div>
-
-        <div class="col-lg-3 col-md-6">
-          <h5 class="text-light mb-4">Services <br>
-            <hr>
-          </h5>
-          <a class="btn btn-link size-txt-1" href="service.html">Services</a>
-          <a class="btn btn-link size-txt-1" href="medical-treatment.html">Medical Treatment Cost</a>
-          <a class="btn btn-link size-txt-1" href="refund-policy.html">Refund & Cancellation Policy</a>
-
-
-        </div>
-
-        <div class="col-lg-3 col-md-6">
-          <h5 class="text-light mb-4">Quick Links <br>
-            <hr>
-          </h5>
-          <a class="btn btn-link size-txt-1" href="about.html">About Us</a>
-          <a class="btn btn-link size-txt-1" href="contact.html">Contact Us</a>
-          <a class="btn btn-link size-txt-1" href="privacy-policy.html">Privacy Policy</a>
-          <a class="btn btn-link size-txt-1" href="termsandconditions.html">Terms & Condition</a>
-
-        </div>
-        <div class="col-lg-3 col-md-6">
-          <h5 class="text-light mb-4">Address <br>
-            <hr>
-          </h5>
-          <p class="mb-2 adgest size-txt-1"><i class="fa fa-map-marker-alt me-3"></i>Unit 16A, 16B / 17A
-            Ground Floor,
-            Tower B3,
-            Spaze Itech Park, Sector 49, Gurugram, Haryana 122018, India
-          </p>
-          <p class="mb-2 adgest size-txt-1"><i class="fa fa-phone-alt me-3"></i>+1-855-888-0114</p>
-          <p class="mb-2 adgest size-txt-1"><i class="fa fa-envelope me-3"></i>medical@adamvacations.com</p>
-          <div class="d-flex pt-2">
-            <a class="btn btn-outline-light btn-social rounded-circle" href=""><i class="fab fa-twitter"></i></a>
-            <a class="btn btn-outline-light btn-social rounded-circle" href=""><i class="fab fa-facebook-f"></i></a>
-            <a class="btn btn-outline-light btn-social rounded-circle" href=""><i class="fab fa-youtube"></i></a>
-            <a class="btn btn-outline-light btn-social rounded-circle" href=""><i class="fab fa-linkedin-in"></i></a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="copyright">
-        <div class="row">
-          <div class="col-md-12 text-center text-md-start mb-3 mb-md-0 size-txt-1">
-            &copy; medical@adamvacations.com, All Right Reserved.
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+   <div id="footer"></div>
   <!-- Footer End -->
 
   <!-- Back to Top -->
